--- a/404-page.html
+++ b/404-page.html
@@ -38,7 +38,7 @@
 
         <!-- 404 PAGE
         ================================================== -->
-        <section class="full-screen p-0 bg-img cover-background" data-overlay-dark="4" data-background="img/bg/404-bg.jpg">
+        <section class="full-screen p-0 bg-img cover-background" data-overlay-dark="4" data-background="img/banner/istock.jpg">
             <div class="container-fluid d-flex flex-column position-relative z-index-9">
                 <div class="row align-items-center justify-content-center min-vh-100">
                     <div class="col-xl-7">
@@ -49,7 +49,7 @@
                             <h2 class="h1 mb-4 text-white">Oops! This Page is Not Found.</h2>
                             <p class="lead mb-1-6 text-white opacity8 w-sm-75 w-lg-70 w-xl-80 w-xxl-70 mx-auto">We can’t find the page your are looking for. You can check out our Help Center or head back to Homepage.</p>
                             <div class="text-center">
-                                <a href="index.html" class="btn-style1 text-white">Go Home Page</a>
+                                <a href="index.html" class="btn-style2 text-white">Go Home Page</a>
                             </div>
                         </div>
                     </div>
@@ -58,12 +58,6 @@
         </section>
 
     </div>
-
-    <!-- BUY TEMPLATE
-    ================================================== -->
-    <div class="buy-theme alt-font d-none d-lg-inline-block"><a href="https://themeforest.net/item/sowind-solar-renewable-energy-html-template/51620806" target="_blank"><i class="fas fa-cart-plus"></i><span>Buy Template</span></a></div>
-
-    <div class="all-demo alt-font d-none d-lg-inline-block"><a href="https://themeforest.net/user/websitedesigntemplates" target="_blank"><i class="far fa-envelope"></i><span>Quick Question?</span></a></div>
 
     <!-- SCROLL TO TOP
     ================================================== -->
