--- a/about.html
+++ b/about.html
@@ -79,9 +79,9 @@
                                         <li>
                                             <a href="publications.html">Publications</a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="projects.html">Projects</a>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
@@ -349,14 +349,16 @@
                                 <ul class="footer-link mb-0 list-unstyled list-style3">
                                     <li class="d-inline-block px-3"><a href="index.html">Home</a></li>
                                     <li class="d-inline-block px-3"><a href="about.html">Survey Design</a></li>
-                                    <li class="d-inline-block px-3"><a href="data_description.html">Samples &amp Observations</a></li>
+                                    <li class="d-inline-block px-3"><a href="target_table.html">Samples</a></li>
+                                    <li class="d-inline-block px-3"><a href="observation_table.html">Observations</a></li>
                                     <li class="d-inline-block px-3"><a href="team.html">Team</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="400ms">
                             <div class="text-center text-lg-end">
-                                <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Sowind Powered by <a href="#!" class="text-secondary text-primary-hover">Website Design Templates</a></p>
+                                <p class="d-inline-block text-white mb-0"> Deployed and maintaining by Zhiyuan, <a href="mailto:zyzhengnju@gmail.com" class="text-secondary text-primary-hover"><i class="fas fa-envelope"></i>Contact</a></p>
+                                <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Sowind Powered by <a href="https://www.yunbuluo.net/" class="text-secondary text-primary-hover">Website Design Templates</a></p>
                             </div>
                         </div>
                     </div>
