--- a/data_download.html
+++ b/data_download.html
@@ -74,9 +74,9 @@
                                         <li>
                                             <a href="publications.html">Publications</a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="projects.html">Projects</a>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
@@ -113,6 +113,22 @@
         </section>
 
         <section>
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-md-12">
+                        <p style="font-size: larger;">
+                            The details of DR1 can be found in :
+                            <a href="#!" class="text-primary text-secondary-hover"> Readme_DR1 </a>
+                        </p>  
+
+                        <h4>
+                            Data Release 1:
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            
+            
             <table class="table mb-0">  
                 <thead align="center">
                     <tr>
@@ -130,15 +146,26 @@
 
                 <tbody align="center">
 
-                    <tr>
+                    <!-- <tr>
                         <td>37</td>
                         <td>UGCA193</td>
                         <td>
-                            <a href="https://dgistest.s3.ap-east-1.amazonaws.com/UGCA193.fits" download="UGCA193.fits">
+                            <a href="https://dgis-web.s3.us-east-1.amazonaws.com/pipeline_data/UGCA193.fits">
                                 UGCA 193 [pipeline]
                             </a>
                         </td>
                         <td> --</td>
+                    </tr> -->
+
+                    <tr>
+                        <td>25</td>
+                        <td>NGC 1522</td>
+                        <td>
+                            <a href="https://dgis-web.s3.us-east-1.amazonaws.com/pipeline_data/NGC1522_DATACUBE.fits">
+                                NGC 1522 [pipeline]
+                            </a>
+                        </td>
+                        <td> -- </td>
                     </tr>
 
                 </tbody>
@@ -160,14 +187,16 @@
                                 <ul class="footer-link mb-0 list-unstyled list-style3">
                                     <li class="d-inline-block px-3"><a href="index.html">Home</a></li>
                                     <li class="d-inline-block px-3"><a href="about.html">Survey Design</a></li>
-                                    <li class="d-inline-block px-3"><a href="data_description.html">Samples &amp Observations</a></li>
+                                    <li class="d-inline-block px-3"><a href="target_table.html">Samples</a></li>
+                                    <li class="d-inline-block px-3"><a href="observation_table.html">Observations</a></li>
                                     <li class="d-inline-block px-3"><a href="team.html">Team</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="400ms">
                             <div class="text-center text-lg-end">
-                                <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Sowind Powered by <a href="#!" class="text-secondary text-primary-hover">Website Design Templates</a></p>
+                                <p class="d-inline-block text-white mb-0"> Deployed and maintaining by Zhiyuan, <a href="mailto:zyzhengnju@gmail.com" class="text-secondary text-primary-hover"><i class="fas fa-envelope"></i>Contact</a></p>
+                                <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Sowind Powered by <a href="https://www.yunbuluo.net/" class="text-secondary text-primary-hover">Website Design Templates</a></p>
                             </div>
                         </div>
                     </div>
