--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                                         <li>
                                             <a href="publications.html">Publications</a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="projects.html">Projects</a>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
@@ -92,8 +92,8 @@
                                         <ul>
                                             <li>
                                                 <a href="https://github.com/DGISteam" target="_blank"><i class="fab fa-github"></i></a>
-                                                <li><a href="register.html" class="btn-style2 small text-white">SIGN UP</a></li>
-                                                <li><a href="signin.html" class="btn-style2 small text-white">SIGN IN</a></li>
+                                                <!-- <li><a href="register.html" class="btn-style2 small text-white">SIGN UP</a></li>
+                                                <li><a href="signin.html" class="btn-style2 small text-white">SIGN IN</a></li> -->
                                             </li>
                                         </ul>
                                     </div>
@@ -164,12 +164,13 @@
                                 <span class="line-two"></span>
                                 <h2 class="display-5 font-weight-800 mb-0">What is DGIS?</h2>
                             </div>
-                            <p class="font-weight-900">
-                                DGIS aims to obtain 3-D (2-D space plus 1-D electromagnetic wavelength) mapping of a volume-limited representative sample of low-mass galaxies. 
-                                The stellar masses of galaxies range from 1E6 to 1E9 solar mass. Observations are carried out with WiFeS on ANU 2.3 m telescope and MUSE on VLT.
+                            <p class="font-weight-900" style="font-size:larger;">
+                                DGIS aims to obtain 3-D maps of a volume-limited representative sample of low-mass galaxies, with stellar masses from 1E6 to 1E9 solar masses. 
+                                Observations are conducted using the MUSE/VLT and WiFeS/ANU-2.3m, enabling high spatial resolution (from a few pcs to less than 100 pcs) while 
+                                maintaining high signal-to-noise ratios.
                             </p>
                             <div class="review-img align-items-center d-flex">
-                                <a href="about.html" class="font-weight-800">More ...<i class="ti-arrow-right ms-2 align-middle text-primary"></i></a>
+                                <a href="about.html" class="font-weight-800" style="font-size:larger;">More ...<i class="ti-arrow-right ms-2 align-middle text-primary"></i></a>
                             </div>
                         </div>
                     </div>
@@ -191,14 +192,15 @@
                         </div>
                         <div class="pe-lg-1-9 pe-xl-7">
   
-                            <ul class="list-unstyled mb-0">
+                            <!-- <ul class="list-unstyled mb-0">
                                 <li><p class="font-weight-900">1. Complete dwarf galaxy samples in local universice.</p></li>
                                 <li><p class="font-weight-900">2. High spatial and spectral resolution.</p></li>
                                 <li><p class="font-weight-900">3. Entire optical wavelengh coverage.</p></li>
                                 <li><p class="font-weight-900">4. Deep exposures & high signal-to-noise ratio.</p></li>
-                            </ul>
+                            </ul> -->
+                            
                             <div class="review-img align-items-center d-flex">
-                                <a href="about.html" class="font-weight-800"><h5>More ...<i class="ti-arrow-right ms-2 align-middle text-primary"></i></h5></a>
+                                <a href="about.html" class="font-weight-800"><h4>More ...<i class="ti-arrow-right ms-2 align-middle text-primary"></i></h4></a>
                             </div>
                         </div>
                     </div>
@@ -206,54 +208,50 @@
                         <div id="accordion" class="accordion-style">
                             <div class="card mb-3">
                                 <div class="card-header" id="headingOne">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">1. Baryonic cycles in dwarf galaxies.</button>
-                                    </h5>
+                                    <h4 class="mb-0">
+                                        <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"><h5>1. Baryonic cycles in dwarf galaxies.</h5></button>
+                                    </h4>
                                 </div>
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
                                     <div class="card-body font-weight-500">
-                                        Cycles between different baryonic components are the driving mechanisms for galaxy formation and evolution: gas collapses into stars, causing star formation processes; 
-                                        stars pollute the ISM by producing metals; the mix of metals and dust with gas regulates cooling efficiency; the CGM freshes the gas reservoir and dilutes the metallicity 
-                                        in galaxies; outflows/radiation from stars and central massive black holes influence the ISM and CGM in various aspects; radial migration and interaction with satellites 
-                                        reshape the morphologies and kinematics of gas and stars. These processes have been extensively studied in massive galaxies, demonstrating that a galaxy is a complicated 
-                                        ecosystem that can only be fully understood by studying all these processes. DGIS will advance studies of dwarf galaxies by enabling measurements of various galactic components,
-                                        as well as their spatial distribution and kinematics, by combining with its rich ancillary data. Combined with IFU data for massive galaxies available in the literature,
-                                        DGIS will enable a more complete understanding of the physical processes driving galaxy formation and evolution across a wide stellar mass scale.
+                                        <p style="font-size:larger;">
+                                            Cycles between different baryonic components are the driving mechanisms for galaxy formation and evolution. Studies of massive galaxies demonstrate that a galaxy is a complicated 
+                                            ecosystem that can only be fully understood by studying all related processes. DGIS will advance studies of dwarf galaxies by enabling measurements of various galactic components, 
+                                            as well as their spatial distribution and kinematics, by combining with rich ancillary data.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card mb-3">
                                 <div class="card-header" id="headingTwo">
                                     <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">2. Intermediate massive black holes in dwarf galaxies.</button>
+                                        <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><h5>2. Intermediate massive black holes in dwarf galaxies.</h5></button>
                                     </h5>
                                 </div>
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
                                     <div class="card-body font-weight-500">
-                                        Massive black holes born in the early Universe left relics in dwarf galaxies today. Instead of sinking to the galactic center, they could exist across the galaxy given their 
-                                        long dynamical timescale. The population of these IMBHs and their physical properties offer crucial insights into the formation mechanisms of SMBH seeds and their growth. 
-                                        Hunting for these IMBHs has been extremely difficult because (i) their bolometric luminosity is of the same order of magnitude as that of massive evolved stars; (ii) light 
-                                        pollution from ambient stellar emission significantly dilutes the radiation from IMBHs; (iii) searching over the galaxy body is more observationally challenging than those 
-                                        with single-slit/fiber observations. Currently, through various methods, roughly 1% of dwarf galaxies within the stellar mass range of DGIS are found to host active BHs, with 
-                                        almost all of them located at galactic centers. DGIS has been designed to maximize the success of IMBH hunting in dwarfs by covering a significant fraction of the galaxy body
-                                        (roughly to Re), providing high spatial resolution combined with high S/N to eliminate stellar dilution significantly, and offering multiple diagnostics (BPT diagram, He II, 
-                                        broad emission line) to identify active BH accretion.
+                                        <p style="font-size:larger;">
+                                            Massive black holes born in the early Universe left relics in dwarf galaxies today. Instead of sinking to the galactic center, they could exist across the galaxy given their long 
+                                            dynamical timescale. DGIS has been designed to maximize the success of IMBH hunting in dwarfs by covering a significant fraction of the galaxy body (roughly to Re), providing high 
+                                            spatial resolution combined with high S/N to eliminate stellar dilution significantly, and offering multiple diagnostics (BPT diagram, He II, broad emission line) to identify active 
+                                            BH accretion.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" id="headingThree">
                                     <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">3. The inner density profile of dark matter.</button>
+                                        <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><h5>3. The inner density profile of dark matter.</h5></button>
                                     </h5>
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
                                     <div class="card-body font-weight-500">
-                                        While the ΛCDM has achieved tremendous success in matching the observations at the large scale of the Universe, there are distinct differences at small scales. The inner profile
-                                        of dark matter is one of them, with core profiles preferred in observations versus cuspy profiles predicted in simulations. Because dwarf galaxies are dominated by dark matter even 
-                                        at their centers, they have been ideal laboratories for understanding the above core/cuspy problem To have a reliable measurement of the inner profile, one needs to probe the 
-                                        kinematics within the central 100 pc, which requires a spatial resolution as small as tens of parsec. As shown in the collections of rotation curves of dwarf galaxies, only a few 
-                                        objects have kinematic measurements within the central 100 pc. Our proposed observations will remedy this situation by in creasing the sample size by a few factors.
+                                        <p style="font-size:larger;">
+                                            While the LambdaCDM has achieved tremendous success in matching the observations at the large scale of the Universe, there are distinct differences at small scales. The inner profile 
+                                            of dark matter is one of them, with core profiles preferred in observations versus cuspy profiles predicted in simulations. To have a reliable measurement of the inner profile, one 
+                                            needs to probe the kinematics within the central 100 pc. This requires a spatial resolution as small as tens of parsec, which will achieved by DGIS.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -289,7 +287,7 @@
                         </div>
                     </div>
                     <!-- UGCA 193 -->
-                    <div class="portfolio-style-03">
+                    <!-- <div class="portfolio-style-03">
                         <div class="portfolio-img overflow-hidden">
                             <img src="img/projects/UGCA193.png" alt="...">
                         </div>
@@ -301,7 +299,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     
                 </div>
             </div>
@@ -321,30 +319,33 @@
                 <div class="row">
                     <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="200ms">
                         <div>
-                            <img src="img/gallery/WLM.png" alt="...">
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="300ms">
-                        <div>
-                            <img src="img/gallery/NGC0059.png" alt="...">
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="300ms">
-                        <div>
-                            <img src="img/gallery/ESO294.png" alt="...">
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="300ms">
-                        <div>
-                            <img src="img/gallery/ESO410.png" alt="...">
+                            <img src="img/gallery/CGCG035_Vel.png" alt="...">
                         </div>
                     </div>
 
-                    <div class="col wow fadeIn" data-wow-delay="600ms">
+                    <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="300ms">
+                        <div>
+                            <img src="img/gallery/CGCG035_Na.png" alt=...">
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="300ms">
+                        <div>
+                            <img src="img/gallery/ESO294.png" alt="...">
+                        </div>
+                    </div> -->
+
+                    <!-- <div class="col-6 col-sm-3 col-lg wow fadeIn" data-wow-delay="300ms">
+                        <div>
+                            <img src="img/gallery/ESO410.png" alt="...">
+                        </div>
+                    </div> -->
+
+                    <!-- <div class="col wow fadeIn" data-wow-delay="600ms">
                         <div class="d-none d-lg-block">
                             <img src="img/gallery/IC1574.png" alt="...">
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -361,21 +362,22 @@
                                 <ul class="footer-link mb-0 list-unstyled list-style3">
                                     <li class="d-inline-block px-3"><a href="index.html">Home</a></li>
                                     <li class="d-inline-block px-3"><a href="about.html">Survey Design</a></li>
-                                    <li class="d-inline-block px-3"><a href="data_description.html">Samples &amp Observations</a></li>
+                                    <li class="d-inline-block px-3"><a href="target_table.html">Samples</a></li>
+                                    <li class="d-inline-block px-3"><a href="observation_table.html">Observations</a></li>
                                     <li class="d-inline-block px-3"><a href="team.html">Team</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="400ms">
                             <div class="text-center text-lg-end">
-                                <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Sowind Powered by <a href="#!" class="text-secondary text-primary-hover">Website Design Templates</a></p>
+                                <p class="d-inline-block text-white mb-0"> Deployed and maintaining by Zhiyuan, <a href="mailto:zyzhengnju@gmail.com" class="text-secondary text-primary-hover"><i class="fas fa-envelope"></i>Contact</a></p>
+                                <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Sowind Powered by <a href="https://www.yunbuluo.net/" class="text-secondary text-primary-hover">Website Design Templates</a></p> 
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
-
     </div>
 
 
